[package]
name = "primer_contrato"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
base64ct = "=1.6.0"

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []

[patch.crates-io]
backtrace = "=0.3.74"
icu_collections = "=1.4.0"
icu_locale_core = "=1.4.0"
icu_normalizer = "=1.4.0"
icu_normalizer_data = "=1.4.0"
icu_properties = "=1.4.0"
icu_properties_data = "=1.4.0"
icu_provider = "=1.4.0"
idna_adapter = "=1.1.0"
litemap = "=0.7.0"
potential_utf = "=0.1.1"
tinystr = "=0.7.0"
writeable = "=0.5.0"
yoke = "=0.7.0"
zerofrom = "=0.1.5"
zerotrie = "=0.2.1"
zerovec = "=0.10.0"
